--- a/src/style/components/common/Header.scss
+++ b/src/style/components/common/Header.scss
@@ -122,6 +122,9 @@
                             width: 120px;
                             margin: 0 10px;
                         }
+                        .end-nav{
+                            display:flex;
+                        }
                         
                     }
                 }
