--- a/src/style/components/common/CartHeader.scss
+++ b/src/style/components/common/CartHeader.scss
@@ -57,14 +57,38 @@
         margin: 10px 0;
         padding: 10px 0 15px 0;
         border-bottom: 1px solid black ;
-        .cart-item-data{
+        .cart-item-data.row{
+            height:fit-content;
             list-style: none;
             padding: 5px;
             margin:5px 0;
-            .cart-item-btn-remove{
-                border:none;
-
+            .cart-box-data-item.col-md-3.col-sm-3{
+                padding: 5px;
+                .cart-item-image{
+                    width: 100%;
+                    height:auto;
+                    object-fit: cover;
+                }
             }
+            .cart-box-data-item.col-md-8.col-sm-8{
+                display:block;
+                .cart-box-data-item-product-name{
+                    margin: 10px 0;
+                }
+                .cart-box-data-item-quantity{
+                    width: 40px;
+                    margin: 5px 10px 5px 0 ;
+                    padding: 5px;
+                    border-radius: 5px;
+                    border: 1px solid rgba(51, 51, 51, 0.322);
+                }
+                .cart-item-btn-remove{
+                    border:none;
+    
+                }
+            }
+            
+            
         }
     }
     .cart-item-box{
